--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                       <span class="px-3 text-muted">|</span>
                       <i class="mdi mdi-email"></i> 
                       <span>
-                        <a href="mailto:swaroopthedeveloper@outlook.com">swaroopthedeveloper@outlook.com</a>
+                        <a href="mailto:contact@swaroop.work">contact@swaroop.work</a>
                       </span>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
                         </div>
                       </div>
                       <div class="pt-2 pb-3 w-100 text-center d-print-none">
-                        <a href="mailto:swaroopthedeveloper@outlook.com" class="btn btn-primary">I am available for hiring</a>
+                        <a href="mailto:contact@swaroop.work" class="btn btn-primary">I am available for hiring</a>
                       </div>
                     </div>                   
         </div>
