--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <div class="col-12">
                   <h3 class="pb-1">Summary</h3>
                     <ul>
-                      <li> Full Stack Developer</li>
+                      <li> Python Developer</li>
                       <li> Site Reliability Engineer </li>
                       <li> Machine Learning Enthusiast</li>
                       <li> ITIL 2011 Certified</li>
@@ -38,7 +38,7 @@
                 <div class="col-12">
                     <h3 class="pb-1">Skills</h3>
                     <ul>
-                      <li>Primary Programming languages : Python &amp; Javascript</li>
+                      <li>Primary Programming languages : Python </li>
                       <li>Web Frameworks : Django &amp; Flask</li>
                       <li>Databases : Maria,Mysql &amp; Postgresql</li>
                       <li>Web Servers : Nginx &amp; Apache</li>
